--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,8 @@ name: paper-fx
 version: '${version}'
 main: net.aoissx.mc.paperfx.Paper_fx
 api-version: '1.20'
+
+commands:
+  fx:
+    description: fx main command
+    usage: /fx <sub command>
