--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 
 dependencies {
     compileOnly "io.papermc.paper:paper-api:1.20.2-R0.1-SNAPSHOT"
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.43.0.0'
 }
 
 def targetJavaVersion = 17
